[project]
name = "forge-karas"
version = "0.1.0"
description = "Backend course project"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "psycopg2-binary>=2.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
migrate-sql = "app.migrate:run"
